@@ -1,3 +1,6 @@
+[B]Version 1.2.1 (Sep 20, 2012)[/B]
+- Localized all GUI strings
+
 [B]Version 1.2.0 (Sep 20, 2012)[/B]
 - Updated dependency to use python 2.0 instead of 1.0
 - Changed name of addon to all lowercase to be consistent with addon naming requirements
